examples/gwapi3/foo/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  namespace: foo
spec:
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      containers:
        - name: foo
          image: ghcr.io/sikalabs/hello-world-server
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: foo
  namespace: foo
spec:
  selector:
    app: foo
  ports:
    - port: 80
      targetPort: 8000
