examples/gwapi3/foo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo
  namespace: foo
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: foo
  hostnames:
    - foo.rke2.sikademo.com
  rules:
    - backendRefs:
        - name: foo
          port: 80
